crates/snapshot-tests/tests/snapshots/parser__bad_underscores__trailing2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: underscores must be between two digits at `foo`
  ┌─ trailing2:1:10
  │
1 │ foo = 1_0_
  │          ^ invalid integer: underscores must be between two digits


error: invalid integer: underscores must be between two digits at `foo`
 --> trailing2:1:10
  |
1 | foo = 1_0_
  |          ^ invalid integer: underscores must be between two digits
Error {
    kind: "InvalidInteger",
    message: "invalid integer: underscores must be between two digits",
    span: 9..10,
    path: Some(
        "foo",
    ),
}
